slideshow layout corrected (ipad) scrollbar thing left alone. Not sure its and issue really
Former-commit-id: d6fffc170a200aa343089fc4fb74110ee50bb81c

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -64,9 +64,10 @@
 		position: absolute;
 		left: 0;
 		top: 0;
-		// overflow-x: hidden;
-		// overflow-y: scroll;
-		overflow: hidden;
+		overflow-x: hidden;
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
+		// overflow: hidden;
 
 		width: 100%;
 		height: 100%;
