--- a/app/scss/_slide.scss
+++ b/app/scss/_slide.scss
@@ -8,12 +8,16 @@
 	width: 100%;
 	height: 100%;
 
+	flex: 1 1 auto;
+
 	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 
 	@include flexy(column);
 	justify-content: flex-start;
 
 	.title {
+		flex: 0 0 auto;
 		@include freight-bold;
 		color: $white;
 		font-size: 1em;
@@ -28,6 +32,7 @@
 
 	.image {
 		width: 100%;
+		flex: 0 0 auto;
 		// height: 140px;
 
 
@@ -37,8 +42,6 @@
 		// cursor: pointer;
 		}
 		
-		// @include flexy(row);
-		// justify-content: space-around;
 
 		div {
 			height: 100%;
